2003-04-08 Andy Ruder <aeruder@ksu.edu>
 * Added a preferences panel
 * Got everything organized and mostly working
