@@ -1,3 +1,6 @@
+2003-05-15 Andy Ruder <aeruder@ksu.edu>
+ * This thing is ready for a release
+
 2003-04-08 Andy Ruder <aeruder@ksu.edu>
  * Added a preferences panel
  * Got everything organized and mostly working
